--- a/art.html
+++ b/art.html
@@ -24,7 +24,7 @@
                     <div class="card-body">
                         <h2 class="card-title">Space Explorer</h2>
                         <a href="space-explorer-gallery.html">
-                            <img class="card-img-top" src="img/space_explorer/rocket.png" alt="space-explorer">
+                            <img class="card-img-top" src="img/space-explorer.png" alt="space-explorer">
                         </a>
                     </div>
                 </div>
@@ -34,7 +34,7 @@
                     <div class="card-body">
                         <h2 class="card-title">Haunted Apothecary</h2>
                         <a href="apothecary-gallery.html">
-                            <img class="card-img-top" src="img/apothecary/jellyfish.png" alt="apothecary">
+                            <img class="card-img-top" src="img/apothecary/shadow.png" alt="apothecary">
                         </a>
                     </div>
                 </div>
