--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 </head>
 <body class="image-body space-body">
     <div id="navbar-placeholder"></div>
-    <!--<div class="central-box title-box">
-        <h1>Portfolio Beyond</h1>
-    </div>-->
+    <div class="page-title">Welcome to Portfolio Beyond<span>.</span></div>
+    <div class="page-sub-title">My name is <a href="about.html">Elizabeth Roberts<span>.</span></a></div>
     <div class="central-box">
-        <!--<p>add sum stuff here</p>-->
         <div class="row">
             <div class="col-lg-4 col-sm-12">
                 <div class="card text-white bg-dark mb-3 text-center hoverable">
@@ -43,7 +41,7 @@
             <div class="col-lg-4 col-sm-12">
                 <div class="card text-white bg-dark mb-3 text-center hoverable">
                     <div class="card-body">
-                        <h2 class="card-title">About</h2>
+                        <h2 class="card-title">About Me</h2>
                         <a href="about.html">
                             <img class="card-img-top" src="img/devabt.png" alt="about-link">
                         </a>
