--- a/project.html
+++ b/project.html
@@ -23,7 +23,7 @@
                     <div class="card-body">
                         <h2 class="card-title">Space Explorer</h2>
                         <a href="space-explorer.html">
-                            <img class="card-img-top" src="img/space_explorer/rocket.png" alt="space-explorer">
+                            <img class="card-img-top" src="img/space-explorer.png" alt="space-explorer">
                         </a>
                     </div>
                 </div>
