--- a/nav.html
+++ b/nav.html
@@ -10,7 +10,7 @@
             <li><a href="index.html">HOME</a></li>
             <li><a href="project.html">PROJECTS</a></li>
             <li><a href="art.html">ART PORTFOLIO</a></li>
-            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="about.html">ABOUT ME</a></li>
         </ul>
     </div>
 
