--- a/art.html
+++ b/art.html
@@ -44,7 +44,7 @@
                     <div class="card-body">
                         <h2 class="card-title">Digital Art</h2>
                         <a href="other-art.html">
-                            <img class="card-img-top" src="img/space_explorer/portal-end.png" alt="ghost">
+                            <img class="card-img-top" src="img/cloud.png" alt="ghost">
                         </a>
                     </div>
                 </div>
