--- a/coffeescript.html
+++ b/coffeescript.html
@@ -15,6 +15,7 @@
     <div id="navbar-placeholder"></div>
     <div class="page-title">Coffee Maker Script<span>.</span></div>
     <div class="central-box">
+        <div><img src="img/coffee-script/language-design.png"></div>
         <p>Source Code: <a href="https://github.com/eroberts22/coffeescript">Flex/Bison Coffee Maker Scripting Language - December 2021</a></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
