--- a/space-explorer-gallery.html
+++ b/space-explorer-gallery.html
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </div>
-        <h2>Level Two Assets</h2>  
+        <h2>(Potential) Level Two Assets</h2>  
         <div class="card text-white bg-dark mb-3 text-center">
             <div class="card-body">
                 <h5 class="card-title">Level Two Background</h5>
