project page with all projects, todo add details

--- a/apothecary-gallery.html
+++ b/apothecary-gallery.html
@@ -20,7 +20,7 @@
         <h2>Monsters</h2>
         <div class="row">
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h6 class="card-title">Friendly Ghost</h6>
                         <a href="img/apothecary/ghost1.png">
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h6 class="card-title">Malicious Spectre</h6>
                         <a href="img/apothecary/spectre.png">
@@ -42,7 +42,7 @@
         </div>
         <div class="row">
             <div class="col-sm-4">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h6 class="card-title">Wailing Wraith</h6>
                         <a href="img/apothecary/wraith.png">
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="col-sm-4">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h6 class="card-title">Sneaky Shades</h6>
                         <a href="img/apothecary/shade.png">
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="col-sm-4">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h6 class="card-title">Stinging Jellyfish</h6>
                         <a href="img/apothecary/jellyfish.png">
@@ -74,7 +74,7 @@
         </div>
         <div class="row">
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h6 class="card-title">Pale Shadow</h6>
                         <a href="img/apothecary/shadow.png">
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h6 class="card-title">Twilight Nightmare</h6>
                         <a href="img/apothecary/nightmare.png">
@@ -97,7 +97,7 @@
         <h2>Items</h2>
         <div class="row">
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h6 class="card-title">Health Potion</h6>
                         <a href="img/apothecary/health_potion.png">
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h6 class="card-title">Spell Potion</h6>
                         <a href="img/apothecary/spell_potion.png">
@@ -119,7 +119,7 @@
         </div>
         <div class="row">
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h6 class="card-title">Life Potion</h6>
                         <a href="img/apothecary/life_potion.png">
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h6 class="card-title">Treasure Chest</h6>
                         <a href="img/apothecary/chest.png">
@@ -141,7 +141,7 @@
         </div>
         <!--
         <h2>Background</h2>
-        <div class="card text-white bg-dark mb-3 text-center">
+        <div class="card text-white bg-gray mb-3 text-center">
             <div class="card-body">
                 <h6 class="card-title">Dungeon Room</h6>
                 <a href="img/apothecary/background.png">
@@ -160,7 +160,7 @@
 
 <!--
 <div class="col-sm-6">
-    <div class="card text-white bg-dark mb-3 text-center">
+    <div class="card text-white bg-gray mb-3 text-center">
         <div class="card-body">
             <h6 class="card-title"></h6>
             <a href="">
