--- a/art.html
+++ b/art.html
@@ -16,11 +16,31 @@
 <body class="image-body space-body">
     <div id="navbar-placeholder"></div>
     <div class="page-title">Art Portfolio<span>.</span></div>
+   
+        
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
+
     <div class="central-box">
-        <!--<p>Original game assets and art</p>-->
-        <div class="row">
+
+    </div>
+
+   <!--<div class="row">
             <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-dark mb-3 text-center h-100 hoverable">
+                <div class="card-body">
+                    <h2 class="card-title"></h2>
+                    <a href="#"><img class="card-img-top" src="#" alt=""></a>
+                </div>
+            </div>
+        </div>-->
+
+<!--<div class="row">
+            <div class="col-lg-4 col-sm-12 py-2">
+                <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
                     <div class="card-body">
                         <h2 class="card-title">Space Explorer</h2>
                         <a href="space-explorer-gallery.html">
@@ -30,7 +50,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-dark mb-3 text-center h-100 hoverable">
+                <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
                     <div class="card-body">
                         <h2 class="card-title">Haunted Apothecary</h2>
                         <a href="apothecary-gallery.html">
@@ -40,7 +60,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-dark mb-3 text-center h-100 hoverable">
+                <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
                     <div class="card-body">
                         <h2 class="card-title">Digital Art</h2>
                         <a href="other-art.html">
@@ -50,10 +70,4 @@
                 </div>
             </div>
         </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+    </div>-->
