--- a/other-art.html
+++ b/other-art.html
@@ -15,27 +15,27 @@
     <div id="navbar-placeholder"></div>
     <div class="page-title">Digital Art<span>.</span></div>
     <div class="central-box art-box">
-        <div class="card text-white bg-dark mb-3 text-center">
+        <div class="card text-white bg-gray mb-3 text-center">
             <div class="card-body">
                 <h5 class="card-title">Ghost</h5>
                 <a href="img/art_portfolio/ghost.jpg">
-                    <img class="card-img-top" src="img/art_portfolio/ghost.jpg" alt="ghost">
+                    <img class="card-img-top" src="img/art_portfolio/digital/ghost.jpg" alt="ghost">
                 </a>
             </div>
         </div>
-        <div class="card text-white bg-dark mb-3 text-center">
+        <div class="card text-white bg-gray mb-3 text-center">
             <div class="card-body">
                 <h5 class="card-title">Dark Clouds Wallpaper</h5>
                 <a href="img/art_portfolio/webpage-dark-clouds.png">
-                    <img class="card-img-top" src="img/art_portfolio/webpage-dark-clouds.png" alt="cloud">
+                    <img class="card-img-top" src="img/art_portfolio/digital/webpage-dark-clouds.png" alt="cloud">
                 </a>
             </div>
         </div>
-        <div class="card text-white bg-dark mb-3 text-center">
+        <div class="card text-white bg-gray mb-3 text-center">
             <div class="card-body">
                 <h5 class="card-title">Teal Clouds Wallpaper</h5>
                 <a href="img/art_portfolio/webpage-clouds.png">
-                    <img class="card-img-top" src="img/art_portfolio/webpage-clouds.png" alt="cloud">
+                    <img class="card-img-top" src="img/art_portfolio/digital/webpage-clouds.png" alt="cloud">
                 </a>
             </div>
         </div>
