--- a/space-explorer-gallery.html
+++ b/space-explorer-gallery.html
@@ -20,7 +20,7 @@
         <h2>General Assets</h2>
         <div class="row">
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h5 class="card-title">Spaceship</h5>
                         <a href="img/space_explorer/rocket.png">
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h5 class="card-title">End Portal</h5>
                         <a href="img/space_explorer/portal-end.png">
@@ -42,7 +42,7 @@
         </div>
         <div class="row">
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h5 class="card-title">Fuel Icon</h5>
                         <a href="img/space_explorer/fuel.png">
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h5 class="card-title">Shield Icon</h5>
                         <a href="img/space_explorer/shield.png">
@@ -63,7 +63,7 @@
             </div>
         </div>
         <h2>Level One Assets</h2>
-        <div class="card text-white bg-dark mb-3 text-center">
+        <div class="card text-white bg-gray mb-3 text-center">
             <div class="card-body">
                 <h5 class="card-title">Level One Background</h5>
                 <a href="img/space_explorer/space-planets.png">
@@ -71,7 +71,7 @@
                 </a>
             </div>
         </div>
-        <div class="card text-white bg-dark mb-3 text-center">
+        <div class="card text-white bg-gray mb-3 text-center">
             <div class="card-body">
                 <h5 class="card-title">Back Layer</h5>
                 <a href="img/space_explorer/space-planets-back.png">
@@ -79,7 +79,7 @@
                 </a>
             </div>
         </div>
-        <div class="card text-white bg-dark mb-3 text-center">
+        <div class="card text-white bg-gray mb-3 text-center">
             <div class="card-body">
                 <h5 class="card-title">Front Layer</h5>
                 <a href="img/space_explorer/space-planets-front.png">
@@ -90,7 +90,7 @@
         </div>
         <div class="row">
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h5 class="card-title">Asteroid One</h5>
                         <a href="img/space_explorer/asteroid1.png">
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h5 class="card-title">Asteroid Two</h5>
                         <a href="img/space_explorer/asteroid2.png">
@@ -111,7 +111,7 @@
             </div>
         </div>
         <h2>(Potential) Level Two Assets</h2>  
-        <div class="card text-white bg-dark mb-3 text-center">
+        <div class="card text-white bg-gray mb-3 text-center">
             <div class="card-body">
                 <h5 class="card-title">Level Two Background</h5>
                 <a href="img/space_explorer/space-cold.png">
@@ -121,7 +121,7 @@
         </div>
         <div class="row">
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h5 class="card-title">Comet</h5>
                         <a href="img/space_explorer/comet.png">
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-gray mb-3 text-center">
                     <div class="card-body">
                         <h5 class="card-title">Milky Way Portal</h5>
                         <a href="img/space_explorer/milkyway-end.png">
