--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/beyond.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/script.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
+
 <body class="image-body space-body">
     <div id="navbar-placeholder"></div>
     <div class="page-title">Welcome to Portfolio Beyond<span>.</span></div>
     <div class="page-sub-title">My name is <a href="about.html">Elizabeth Roberts<span>.</span></a></div>
+
     <div class="central-box">
         <div class="row">
             <div class="col-lg-4 col-sm-12">
-                <div class="card text-white bg-dark mb-3 text-center hoverable">
+                <div class="card text-white bg-gray mb-3 text-center hoverable">
                     <div class="card-body">
                         <h2 class="card-title">Projects</h2>
                         <a href="project.html">
@@ -29,7 +32,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12">
-                <div class="card text-white bg-dark mb-3 text-center hoverable">
+                <div class="card text-white bg-gray mb-3 text-center hoverable">
                     <div class="card-body">
                         <h2 class="card-title">Art Portfolio</h2>
                         <a href="art.html">
@@ -39,7 +42,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12">
-                <div class="card text-white bg-dark mb-3 text-center hoverable">
+                <div class="card text-white bg-gray mb-3 text-center hoverable">
                     <div class="card-body">
                         <h2 class="card-title">About Me</h2>
                         <a href="about.html">
@@ -49,9 +52,14 @@
                 </div>
             </div>
         </div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
+
+
+
