--- a/project.html
+++ b/project.html
@@ -8,41 +8,52 @@
     <link rel="stylesheet" href="css/beyond.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/831e460dec.js"></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css"
+        integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous">
+
     <script src="js/script.js" defer></script>
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="image-body space-body">
+
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
+    <!--nav bar-->
     <div id="navbar-placeholder"></div>
+    <!--Projects-->
     <div class="page-title">Projects<span>.</span></div>
     <div class="central-box">
         <div class="row py-2">
             <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-dark mb-3 text-center h-100 hoverable">
+                <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
                     <div class="card-body">
                         <h2 class="card-title">Space Explorer</h2>
-                        <a href="space-explorer.html">
+                        <a href="#space-explorer">
                             <img class="card-img-top" src="img/space-explorer.png" alt="space-explorer">
                         </a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-dark mb-3 text-center h-100 hoverable">
+                <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
                     <div class="card-body">
                         <h2 class="card-title">Haunted Apothecary</h2>
-                        <a href="apothecary.html">
+                        <a href="#haunted-apothecary">
                             <img class="card-img-top" src="img/apothecary/shadow.png" alt="apothecary">
                         </a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-dark mb-3 text-center h-100 hoverable">
+                <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
                     <div class="card-body">
                         <h2 class="card-title">Coffee Maker Script</h2>
-                        <a href="coffeescript.html">
+                        <a href="#coffee-script">
                             <img class="card-img-top" src="img/coffee-script/coffeecup.png" alt="coffeescript">
                         </a>
                     </div>
@@ -51,32 +62,71 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <div class="card text-white bg-dark mb-3">
+                <div class="card text-white bg-gray mb-3">
                     <div class="card-body list-box">
                         <h4 class="card-title" style="text-align: center;">Other Projects</h4>
                         <ul>
-                            <li><a href="https://github.com/eroberts22/portfoliobeyond">Portfolio Beyond Source Code</a></li>
-                            <li><a href="https://lizroberts2000.wixsite.com/asteroids-3d" target="_blank">C++/OpenGL 3D Asteroids - April 2021</a></li>
-                            <li><a href="https://lizroberts2000.wixsite.com/garden-simulation" target="_blank">C++ Garden Simulation - April 2020</a></li>
+                            <li><a href="https://github.com/eroberts22/portfoliobeyond">Portfolio Beyond Source Code</a>
+                            </li>
+                            <li><a href="https://lizroberts2000.wixsite.com/asteroids-3d" target="_blank">C++/OpenGL 3D
+                                    Asteroids - April 2021</a></li>
+                            <li><a href="https://lizroberts2000.wixsite.com/garden-simulation" target="_blank">C++
+                                    Garden Simulation - April 2020</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <!--
-        <div class="central-box list-box">
-            <h2 style="text-align: center;">Other Projects</h2>
-            <ul>
-                <li><a href="https://github.com/eroberts22/portfoliobeyond">Portfolio Beyond Source Code</a></li>
-                <li><a href="https://lizroberts2000.wixsite.com/asteroids-3d" target="_blank">C++/OpenGL 3D Asteroids - April 2021</a></li>
-                <li><a href="https://lizroberts2000.wixsite.com/garden-simulation" target="_blank">C++ Garden Simulation - April 2020</a></li>
-            </ul>
+    </div>
+    <!--Space Explorer-->
+    <div id="space-explorer">
+        <div class="page-title">Space Explorer<span>.</span></div>
+        <div class="central-box">
+            <p><img src="img/space_explorer/rocket.png" alt="rocket">
+                Space Explorer is a sidescroller version of the classic asteroids game implemented using HTML, CSS, and
+                Javascript. I developed this game
+                alongside fellow students at Whitworth University, Ethan Worth and Owen Foster, for our Internet
+                Applications Development class. As a group,
+                we went from knowing very little about web applications to developing this game in two weeks. <br><br>
+                The starship has launched from a planet deep within a distant solar system with one mission: to get back
+                to
+                Earth with treasures,
+                scientific discoveries, and research advancements. Unfortunately, there are obstacles, and to make it to
+                the
+                portal that takes the ship home,
+                these must be managed. Asteroids come hurtling through space, damaging the starship's shields. Fuel is
+                limited, and every evasive maneuver drains it.
+                Managing these resources is crucial, or else mission failure is inevitable. <br><br>
+                See the game assets <a href="space-explorer-gallery.html">here</a>.
+            </p>
+            <a class="btn btn-outline-light" style="margin: auto; font-size:150%;" href="game.html">Play the Game</a>
+            <p style="text-align: center;">(Only adapted to work on desktop)</p>
         </div>
     </div>
-    -->
+    <!--Haunted Apothecary-->
+    <div id="haunted-apothecary">
+        <div class="page-title">Haunted Apothecary<span>.</span></div>
+        <div class="central-box">
+            <p>Source Code: <a href="https://github.com/eroberts22/apothecary">Java Dungeon Crawler - January 2021</a>
+            </p>
+            <p>See the game assets <a href="apothecary-gallery.html">here</a>.</p>
+        </div>
+    </div>
+    <!--Coffee Script-->
+    <div id="coffee-script">
+        <div class="page-title">Coffee Maker Script<span>.</span></div>
+        <div class="central-box">
+            <div><img src="img/coffee-script/language-design.png"></div>
+            <p>Source Code: <a href="https://github.com/eroberts22/coffeescript">Flex/Bison Coffee Maker Scripting
+                    Language - December 2021</a></p>
+        </div>
+    </div>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-</body>
+    <script src="js/scroll.js"></script>
 
 </html>
