--- a/space-explorer.html
+++ b/space-explorer.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Portfolio Beyond</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/beyond.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/script.js" defer></script>
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
+
 <body class="image-body space-body">
     <div id="navbar-placeholder"></div>
     <div class="page-title">Space Explorer<span>.</span></div>
     <div class="central-box">
         <p><img src="img/space_explorer/rocket.png" alt="rocket">
-            Space Explorer is a sidescroller version of the classic asteroids game implemented using HTML, CSS, and Javascript. I developed this game 
-            alongside fellow students at Whitworth University, Ethan Worth and Owen Foster, for our Internet Applications Development class. As a group, 
-            we went from knowing very little about web applications to developing this game in two weeks. <br><br>            
-            The starship has launched from a planet deep within a distant solar system with one mission: to get back to Earth with treasures, 
-            scientific discoveries, and research advancements. Unfortunately, there are obstacles, and to make it to the portal that takes the ship home,
-            these must be managed. Asteroids come hurtling through space, damaging the starship's shields. Fuel is limited, and every evasive maneuver drains it.
+            Space Explorer is a sidescroller version of the classic asteroids game implemented using HTML, CSS, and
+            Javascript. I developed this game
+            alongside fellow students at Whitworth University, Ethan Worth and Owen Foster, for our Internet
+            Applications Development class. As a group,
+            we went from knowing very little about web applications to developing this game in two weeks. <br><br>
+            The starship has launched from a planet deep within a distant solar system with one mission: to get back to
+            Earth with treasures,
+            scientific discoveries, and research advancements. Unfortunately, there are obstacles, and to make it to the
+            portal that takes the ship home,
+            these must be managed. Asteroids come hurtling through space, damaging the starship's shields. Fuel is
+            limited, and every evasive maneuver drains it.
             Managing these resources is crucial, or else mission failure is inevitable. <br><br>
             See the game assets <a href="space-explorer-gallery.html">here</a>.
         </p>
         <a class="btn btn-outline-light" style="margin: auto; font-size:150%;" href="game.html">Play the Game</a>
         <p style="text-align: center;">(Only adapted to work on desktop)</p>
     </div>
-    </div>
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
