some img and txt wrapping

--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
 <body id="game-body">
     <nav>
         <ul>
-            <li><a href="space-explorer.html">EXIT GAME</a></li>
+            <li><a href="project.html#space-explorer">EXIT GAME</a></li>
         </ul>
         <div id="game-ui" class=".container-fluid">
             <div class="row">
