--- a/project.html
+++ b/project.html
@@ -82,23 +82,35 @@
     <div id="space-explorer">
         <div class="page-title">Space Explorer<span>.</span></div>
         <div class="central-box">
-            <p><img src="img/space_explorer/rocket.png" alt="rocket">
-                Space Explorer is a sidescroller version of the classic asteroids game implemented using HTML, CSS, and
-                Javascript. I developed this game
-                alongside fellow students at Whitworth University, Ethan Worth and Owen Foster, for our Internet
-                Applications Development class. As a group,
-                we went from knowing very little about web applications to developing this game in two weeks. <br><br>
-                The starship has launched from a planet deep within a distant solar system with one mission: to get back
-                to
-                Earth with treasures,
-                scientific discoveries, and research advancements. Unfortunately, there are obstacles, and to make it to
-                the
-                portal that takes the ship home,
-                these must be managed. Asteroids come hurtling through space, damaging the starship's shields. Fuel is
-                limited, and every evasive maneuver drains it.
-                Managing these resources is crucial, or else mission failure is inevitable. <br><br>
-                See the game assets <a href="space-explorer-gallery.html">here</a>.
-            </p>
+            <div style="width: 100%;">
+                <div class="inner-wrap">
+                    <p>
+                        Space Explorer is a sidescroller version of the classic asteroids game implemented using HTML,
+                        CSS, and
+                        Javascript. I developed this game
+                        alongside fellow students at Whitworth University, Ethan Worth and Owen Foster, for our Internet
+                        Applications Development class. As a group,
+                        we went from knowing very little about web applications to developing this game in two weeks.
+                        <br><br>
+                        The starship has launched from a planet deep within a distant solar system with one mission: to
+                        get back
+                        to
+                        Earth with treasures,
+                        scientific discoveries, and research advancements. Unfortunately, there are obstacles, and to
+                        make it to
+                        the
+                        portal that takes the ship home,
+                        these must be managed. Asteroids come hurtling through space, damaging the starship's shields.
+                        Fuel is
+                        limited, and every evasive maneuver drains it.
+                        Managing these resources is crucial, or else mission failure is inevitable. <br><br>
+                        See the game assets <a href="space-explorer-gallery.html">here</a>.
+                    </p>
+                </div>
+                <div class="inner-wrap">
+                    <img class="img-wrap" src="img/space_explorer/rocket.png" alt="rocket">
+                </div>
+            </div>
             <a class="btn btn-outline-light" style="margin: auto; font-size:150%;" href="game.html">Play the Game</a>
             <p style="text-align: center;">(Only adapted to work on desktop)</p>
         </div>
@@ -107,8 +119,7 @@
     <div id="haunted-apothecary">
         <div class="page-title">Haunted Apothecary<span>.</span></div>
         <div class="central-box">
-            <p>Source Code: <a href="https://github.com/eroberts22/apothecary">Java Dungeon Crawler - January 2021</a>
-            </p>
+            <p>See the source code <a href="https://github.com/eroberts22/apothecary">here</a>.</p>
             <p>See the game assets <a href="apothecary-gallery.html">here</a>.</p>
         </div>
     </div>
@@ -116,9 +127,17 @@
     <div id="coffee-script">
         <div class="page-title">Coffee Maker Script<span>.</span></div>
         <div class="central-box">
-            <div><img src="img/coffee-script/language-design.png"></div>
-            <p>Source Code: <a href="https://github.com/eroberts22/coffeescript">Flex/Bison Coffee Maker Scripting
-                    Language - December 2021</a></p>
+            <div style="width: 100%;">
+                <div class="inner-wrap">
+                    <img class="img-wrap" src="img/coffee-script/language-design.png">
+                </div>
+
+                <div class="inner-wrap">
+                    <p>Source Code: <a href="https://github.com/eroberts22/coffeescript">Flex/Bison Coffee Maker
+                            Scripting
+                            Language - December 2021</a></p>
+                </div>
+            </div>
         </div>
     </div>
 
