--- a/project.html
+++ b/project.html
@@ -129,13 +129,13 @@
         <div class="central-box">
             <div style="width: 100%;">
                 <div class="inner-wrap">
-                    <img class="img-wrap" src="img/coffee-script/language-design.png">
+                    
                 </div>
-
                 <div class="inner-wrap">
-                    <p>Source Code: <a href="https://github.com/eroberts22/coffeescript">Flex/Bison Coffee Maker
-                            Scripting
-                            Language - December 2021</a></p>
+                    
+                </div>
+                <div class="inner-wrap">
+                    <p>Source Code: <a href="https://github.com/eroberts22/coffeescript">Flex/Bison Coffee Maker Scripting Language - December 2021</a></p>
                 </div>
             </div>
         </div>
