--- a/art.html
+++ b/art.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="css/beyond.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css"
+        integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous">
     <script src="js/script.js" defer></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
@@ -21,23 +24,230 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="image-body space-body">
+<body class="image-body">
+
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
+
     <div id="navbar-placeholder"></div>
+
     <div class="page-title">Art Portfolio<span>.</span></div>
-   
-        
+
+    <div class="central-box transparent">
+        <div class="row py-2">
+            <div class="col-lg-6 col-md-12 py-2">
+                <h2>Game Assets</h2>
+                <div class="row py-2">
+                    <div class="col-lg-6 col-md-6 py-2">
+                        <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
+                            <div class="card-body">
+                                <h4 class="card-title">Space Explorer</h4>
+                                <a href="#space-explorer">
+                                    <img class="card-img-top" src="img/space-explorer.png" alt="space-explorer">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 py-2">
+                        <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
+                            <div class="card-body">
+                                <h4 class="card-title">Haunted Apothecary</h4>
+                                <a href="#haunted-apothecary">
+                                    <img class="card-img-top" src="img/apothecary/shadow.png" alt="apothecary">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12 py-2">
+                <h2>Other Original Art</h2>
+                <div class="row py-2">
+                    <div class="col-lg-6 col-md-6 py-2">
+                        <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
+                            <div class="card-body">
+                                <h4 class="card-title">Digital Art</h4>
+                                <a href="#digital-art">
+                                    <img class="card-img-top" src="img/cloud.png" alt="Digital">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 py-2">
+                        <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
+                            <div class="card-body">
+                                <h4 class="card-title">Physical Art</h4>
+                                <a href="#physical-art">
+                                    <img class="card-img-top" src="img/coffee-script/coffeecup.png" alt="phys">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <!--space explorer-->
+    <div id="space-explorer">
+        <div class="page-title">Space Explorer<span>.</span></div>
+        <div class="album-grid">
+            <div class="grid-item">
+                <img class="grid-img" src="img/space_explorer/rocket.png" alt="rocket">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/space_explorer/fuel.png" alt="fuel">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/space_explorer/shield.png" alt="shield">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/space_explorer/asteroid1.png" alt="asteroid1">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/space_explorer/asteroid2.png" alt="asteroid2">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/space_explorer/comet.png" alt="comet">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/space_explorer/portal-end.png" alt="portal">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/space_explorer/milkyway-end.png" alt="milkyway-end">
+            </div>
+        </div>
+        <div>
+            <img class="grid-img" src="img/space_explorer/space-planets-back.png" alt="space-planets-back">
+        </div>
+        <div>
+            <img class="grid-img" src="img/space_explorer/space-planets-front.png" alt="space-planets-front">
+        </div>
+        <div>
+            <img class="grid-img" src="img/space_explorer/space-planets.png" alt="space-planets">
+        </div>
+    </div>
+
+    <!--haunted apothecary-->
+    <div id="haunted-apothecary">
+        <div class="page-title">Haunted Apothecary<span>.</span></div>
+        <div class="album-grid">
+            <div class="grid-item">
+                <img class="grid-img" src="img/apothecary/ghost1.png" alt="ghost">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/apothecary/spectre.png" alt="spectre">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/apothecary/wraith.png" alt="wraith">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/apothecary/shade.png" alt="shade">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/apothecary/jellyfish.png" alt="jellyfish">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/apothecary/shadow.png" alt="shadow">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/apothecary/nightmare.png" alt="nightmare">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/apothecary/health_potion.png" alt="health_potion">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/apothecary/spell_potion.png" alt="spell_potion">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/apothecary/life_potion.png" alt="life_potion">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/apothecary/chest.png" alt="chest">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/apothecary/background.png" alt="background">
+            </div>
+        </div>
+    </div>
+
+    <!--digital art-->
+    <div id="digital-art">
+        <div class="page-title">Digital Art<span>.</span></div>
+        <div class="album-grid">
+            <div class="grid-item">
+                <img class="grid-img" src="img/art_portfolio/digital/ghost.jpg" alt="ghost">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/art_portfolio/digital/sage.png" alt="sage">
+            </div>
+        </div>
+        <div class="album-grid">
+            <div class="grid-item">
+                <img class="grid-img" src="img/art_portfolio/digital/webpage-clouds.png" alt="clouds">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/art_portfolio/digital/webpage-dark-clouds.png" alt="cloud">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/cloudfav.png" alt="cloud">
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/coffee-script/coffeecup.png" alt="coffee">
+            </div>
+        </div>
+    </div>
+
+    <!--physical art-->
+    <div id="physical-art">
+        <div class="page-title">Fine Art<span>.</span></div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="js/scroll.js"></script>
 </body>
 
 </html>
 
-    <div class="central-box">
+<!--
+    <div style="width:100%">
+        <div class="inner-wrap-half">
+            <h2>Digital Art</h2>
+            <div class="row py-2">
+                <div class="col-lg-6 col-sm-12 py-2">
+                    <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
+                        <div class="card-body">
+                            <h2 class="card-title">Game Assets</h2>
+                            <a href="#game-assets">
+                                <img class="card-img-top" src="img/space-explorer.png" alt="game-asset">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-sm-12 py-2">
+                    <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
+                        <div class="card-body">
+                            <h2 class="card-title">Original Art</h2>
+                            <a href="#original-art">
+                                <img class="card-img-top" src="img/cloud.png" alt="cloud">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="inner-wrap-half">
+            <h2>Physical Art</h2>
 
+        </div>
     </div>
+-->
 
-   <!--<div class="row">
+<!--<div class="row">
             <div class="col-lg-4 col-sm-12 py-2">
                 <div class="card-body">
                     <h2 class="card-title"></h2>
