started about page

--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/script.js" defer></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css"
+    integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
@@ -23,7 +25,22 @@
     <div id="navbar-placeholder"></div>
     <div class="page-title">About Me<span>.</span></div>
     <div class="central-box">
-        <a href="https://www.linkedin.com/in/elizabeth-roberts-in/">LinkedIn</a>
+        <div style="width: 100%;">
+            <div class="inner-wrap-half">
+                <h1>Hello<span>!</span></h1>
+                <a class="small-logo" href="https://www.linkedin.com/in/elizabeth-roberts-in/">
+              
+                    <i class="fab fa-linkedin-in fa-2x"></i>
+                </a>
+                <a class="small-logo" href="https://github.com/eroberts22">
+                    <i class="fab fa-github fa-2x"></i>
+                </a>
+            </div>
+            <div class="inner-wrap-half">
+                <img class="img-wrap" src="img/cloudfav.png">
+            </div>
+        </div>
+        
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
