--- a/art.html
+++ b/art.html
@@ -69,7 +69,7 @@
                             <div class="card-body">
                                 <h4 class="card-title">Digital Art</h4>
                                 <a href="#digital-art">
-                                    <img class="card-img-top" src="img/cloud.png" alt="Digital">
+                                    <img class="card-img-top" src="img/cloudfav.png" alt="Digital">
                                 </a>
                             </div>
                         </div>
@@ -96,37 +96,48 @@
         <div class="album-grid">
             <div class="grid-item">
                 <img class="grid-img" src="img/space_explorer/rocket.png" alt="rocket">
+                <div class="grid-item-description">Space Ship</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/space_explorer/fuel.png" alt="fuel">
+                <div class="grid-item-description">Fuel Icon</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/space_explorer/shield.png" alt="shield">
+                <div class="grid-item-description">Shield Icon</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/space_explorer/asteroid1.png" alt="asteroid1">
+                <div class="grid-item-description">Asteroid One</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/space_explorer/asteroid2.png" alt="asteroid2">
+                <div class="grid-item-description">Asteroid Two</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/space_explorer/comet.png" alt="comet">
+                <div class="grid-item-description">Comet</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/space_explorer/portal-end.png" alt="portal">
+                <div class="grid-item-description">End Portal</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/space_explorer/milkyway-end.png" alt="milkyway-end">
+                <div class="grid-item-description">Milky Way Portal</div>
             </div>
         </div>
         <div>
             <img class="grid-img" src="img/space_explorer/space-planets-back.png" alt="space-planets-back">
+            <div class="grid-item-description">Back Layer</div>
         </div>
         <div>
             <img class="grid-img" src="img/space_explorer/space-planets-front.png" alt="space-planets-front">
+            <div class="grid-item-description">Front Layer</div>
         </div>
         <div>
             <img class="grid-img" src="img/space_explorer/space-planets.png" alt="space-planets">
+            <div class="grid-item-description">Space Background</div>
         </div>
     </div>
 
@@ -184,6 +195,13 @@
                 <img class="grid-img" src="img/art_portfolio/digital/sage.png" alt="sage">
             </div>
         </div>
+
+        <div class="album-grid">
+            <div class="grid-item">
+                <img class="grid-img" src="img/art_portfolio/digital/fireplace-t.png" alt="fireplace">
+            </div>
+        </div>
+
         <div class="album-grid">
             <div class="grid-item">
                 <img class="grid-img" src="img/art_portfolio/digital/webpage-clouds.png" alt="clouds">
@@ -191,6 +209,9 @@
             <div class="grid-item">
                 <img class="grid-img" src="img/art_portfolio/digital/webpage-dark-clouds.png" alt="cloud">
             </div>
+        </div>
+
+        <div class="album-grid">
             <div class="grid-item">
                 <img class="grid-img" src="img/cloudfav.png" alt="cloud">
             </div>
@@ -203,6 +224,7 @@
     <!--physical art-->
     <div id="physical-art">
         <div class="page-title">Fine Art<span>.</span></div>
+        <div style="margin-bottom: 100px;" class="page-sub-title">Coming Soon<span>.</span></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -212,80 +234,3 @@
 </body>
 
 </html>
-
-<!--
-    <div style="width:100%">
-        <div class="inner-wrap-half">
-            <h2>Digital Art</h2>
-            <div class="row py-2">
-                <div class="col-lg-6 col-sm-12 py-2">
-                    <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
-                        <div class="card-body">
-                            <h2 class="card-title">Game Assets</h2>
-                            <a href="#game-assets">
-                                <img class="card-img-top" src="img/space-explorer.png" alt="game-asset">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-sm-12 py-2">
-                    <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
-                        <div class="card-body">
-                            <h2 class="card-title">Original Art</h2>
-                            <a href="#original-art">
-                                <img class="card-img-top" src="img/cloud.png" alt="cloud">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="inner-wrap-half">
-            <h2>Physical Art</h2>
-
-        </div>
-    </div>
--->
-
-<!--<div class="row">
-            <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card-body">
-                    <h2 class="card-title"></h2>
-                    <a href="#"><img class="card-img-top" src="#" alt=""></a>
-                </div>
-            </div>
-        </div>-->
-
-<!--<div class="row">
-            <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
-                    <div class="card-body">
-                        <h2 class="card-title">Space Explorer</h2>
-                        <a href="space-explorer-gallery.html">
-                            <img class="card-img-top" src="img/space-explorer.png" alt="space-explorer">
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
-                    <div class="card-body">
-                        <h2 class="card-title">Haunted Apothecary</h2>
-                        <a href="apothecary-gallery.html">
-                            <img class="card-img-top" src="img/apothecary/shadow.png" alt="apothecary">
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
-                    <div class="card-body">
-                        <h2 class="card-title">Digital Art</h2>
-                        <a href="other-art.html">
-                            <img class="card-img-top" src="img/cloud.png" alt="ghost">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>-->
