--- a/project.html
+++ b/project.html
@@ -27,7 +27,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="image-body space-body">
+<body class="image-body">
 
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
@@ -124,7 +124,7 @@
                     <img class="img-wrap" src="img/space_explorer/rocket.png" alt="rocket">
                 </div>
             </div>
-            <a class="btn btn-outline-light" style="margin: auto; font-size:150%;" href="game.html">Play the Game</a>
+            <a class="btn btn-outline-light" style="margin: auto; font-size:150%;" href="game.html">Demo</a>
             <p style="text-align: center;">(Only adapted to work on desktop)</p>
         </div>
     </div>
@@ -133,8 +133,16 @@
     <div id="haunted-apothecary">
         <div class="page-title">Haunted Apothecary<span>.</span></div>
         <div class="central-box">
-            <p>See the source code <a href="https://github.com/eroberts22/apothecary">here</a>.</p>
-            <p>See the game assets <a href="apothecary-gallery.html">here</a>.</p>
+            <div style="width: 100%;">
+                <div class="inner-wrap-half">
+                    <p>See the source code <a href="https://github.com/eroberts22/apothecary">here</a>.</p>
+                    <p>See the game assets <a href="apothecary-gallery.html">here</a>.</p>
+                </div>
+                <div class="inner-wrap-half">
+                    <img class="img-wrap" src="img/apothecary/shadow.png" alt="apothecary">
+                </div>
+            </div>
+
         </div>
     </div>
 
@@ -255,7 +263,7 @@
             </div>
         </div>
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
